Fix responsiveness issues on smaller screens on skills and footer sections

--- a/styles/app.css
+++ b/styles/app.css
@@ -644,51 +644,87 @@ section{
 }
 
 .skill-wrapper{
-    display: flex;
-    flex-direction: column;
-    place-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(45vw, 1fr));
+    flex-direction: row;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    padding: 15px 0;
+    place-items: center;
     gap: 1.2rem;
     place-items: start;
     font-size: 1.5rem;
-    min-width: 100vw;
+    min-width: 90vw;
     min-height: 70vh;
     /* background-color: #ccc; */
+    /* border: 1px solid; */
 }
 
 .skill-category{
     display: flex;
     flex-direction: column;
     place-content: center;
-    min-width: 100%;
+    place-items: center;
+    min-width: 90vh;
+    max-width: 90%;
     min-height: 70px;
     cursor: pointer;
     background-color: rgba(73, 14, 14, 0.72);
+    border: 1px solid rgba(255, 208, 0, 0.1);
     z-index: 30;
-    padding: 25px;
+    padding:25px 5px;
     border-radius: 15px;
+    transition: .3s;
     span{
         font-weight: 900;
-        font-size: 1.7rem;
+        font-size: 1.5rem;
+    }
+    &:hover{
+        border: 1px solid;
+        border-color: rgba(255, 208, 0, 0.4);
     }
 }
 
+/* .mid{
+
+} */
+
 .category-title{
     display: flex;
+    /* place-content:center ; */
     place-items: center;
     gap: 1.2rem;
-    img, i{
-        height: 50px;
-        width: 50px;
-        background-color: var(--accent-yellow);
-        border-radius: 6px;
-        padding: 10px;
-        color: #000;
-    }
+    flex-wrap: wrap;
+    /* padding:  0 10px; */
+}
+
+.skill-icon{
+    height: 50px;
+    width: 50px;
+    background-color: var(--accent-yellow);
+    border-radius: 6px;
+    padding: 10px;
+    color: #000;
+}
+
+.fa-angle-right{
+    color: var(--accent-yellow);
+    transition: .3s;
+}
+
+.fa-angle-right.active{
+     transform: rotate(90deg);
 }
 
 .skill-card-wrapper{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    margin-top: 25px;
+    /* border: 1px solid; */
+    /* place-content: center; */
+    place-items: center;
+    padding: 0;
 }
 
 .skill-card{
@@ -745,12 +781,12 @@ section{
     pointer-events: auto;
 }
 
-.fa-angle-right{
+.skill-icon{
     transition: .5s;
 }
 
-.fa-angle-right.active{
-    transform: rotate(90deg);
+.skill-icon.active{
+    transform: rotate(360deg);
 }
 
 .project-section{
