--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,7 @@
 footer{
     display: flex;
     place-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
     min-height: 100px;
     background-color: var(--color-bg-primary);
